python/testData/quickFixes/PyAddImportQuickFixTest/beforeImportAboveBoundCommentsBelowFileCommentBlock/main.py
# comment 1

# comment 2

# comment 3
# comment 4
import b

print(b)
<error descr="Unresolved reference 'a'"><caret>a</error>